--- a/schéma html.html
+++ b/schéma html.html
@@ -2,21 +2,23 @@
 <html>
 
 <head>
-    <meta charset="UTF-8"/>
-    <meta name='description' content=' '/>
-    <title>TO DO</title>
-    <link rel='stylesheet' type='text/css' href='CSS/index.css'/>
+    <meta charset="UTF-8" />
+    <meta name='description' content=' ' />
+    <title>schéma basique</title>
+    <link rel='stylesheet' type='text/css' href='CSS/index.css' />
 </head>
+
 <body>
     <div>
         <img src="discord" alt="image fictive" />
         <h1>Premier schéma</h1>
         <p>lorem ipsum</p>
         <div>
-            
+
         </div>
 
     </div>
     <script src="monpremierscript.js"></script>
 </body>
+
 </html>
