--- a/HTML/49 structure d'un site/index.html
+++ b/HTML/49 structure d'un site/index.html
@@ -3,10 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Accueil site vitrine</title>
 </head>
 <body>
+    <header>
+        <div>
+                <img src="ressources/logo.png" alt="Logo"/ width="50px">
+                L'entreprise qui tue!
+        </div>
+    </header>
+     <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="projects.html">Projets</a></li>
+            <li><a href="about.html">A propos</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+
+    <section>
+        <h1>We are the best!!!!</h1>
+        <p>
+            La meilleure entrprise 3.0 dans le jeu vidéo. venez <a href="about.html">nous découvrir</a>
+        </p>
+    </section>
+    <section>
+        <a href="https://www.la page introuvable.com"><img src="ressources/logoLion.png" alt="logo lion" width="100px"></a>
+        <a href="https://www.la page introuvable.com"><img src="ressources/logoPanda.png" alt="logo panda" width="100px"></a>
+        <a href="https://www.la page introuvable.com"><img src="ressources/logoRhino.png" alt="logo rhino" width="100px"></a>
+    </section>
+    <section>
+        <h2>Nos projets</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia recusandae inventore quis expedita dolores, id omnis neque, soluta alias assumenda labore nemo doloremque placeat reprehenderit cum? Amet dolores voluptate eos!</p>
+        <a href="projects.html">Nos projets en détail</a>
+    </section>
+    <section>
+        <h2>leurs avis</h2>
+        <div>
+            <pre>
+                <b>M Machintruc kevin </b>                                         6/10
+                Je pense qu'on ne peut pas trouver mieux!
+                incomparable, sans équivalent!
+            </pre>
+        </div>
+        <div>
+            <pre>
+                <b>M Machintruc kevin</b>                                          6/10
+                Je pense qu'on ne peut pas trouver mieux!
+                incomparable, sans équivalent!
+            </pre>
+        </div>
+        <div>
+            <pre>
+                <b>Machintruc kevin </b>                                         6/10
+                Je pense qu'on ne peut pas trouver mieux!
+                incomparable, sans équivalent!
+            </pre>
+        </div>
+    </section>
+    <footer>
+        <p>copyright Sébastien F</p>
+    </footer>
     
 </body>
 </html>
