autres pages génériques

--- a/HTML/49 structure d'un site/projects.html
+++ b/HTML/49 structure d'un site/projects.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div>
+                <img src="ressources/logo.png" alt="Logo"/ width="50px">
+                L'entreprise qui tue!
+        </div>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Accueil</a></li>
+            <li><a href="projects.html">Projets</a></li>
+            <li><a href="about.html">A propos</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section>
+        <h2>leurs avis</h2>
+        <div>
+            <pre>
+                <b>M Machintruc kevin </b>                                         6/10
+                Je pense qu'on ne peut pas trouver mieux!
+                incomparable, sans équivalent!
+            </pre>
+        </div>
+        <div>
+            <pre>
+                <b>M Machintruc kevin</b>                                          6/10
+                Je pense qu'on ne peut pas trouver mieux!
+                incomparable, sans équivalent!
+            </pre>
+        </div>
+        <div>
+            <pre>
+                <b>Machintruc kevin </b>                                         6/10
+                Je pense qu'on ne peut pas trouver mieux!
+                incomparable, sans équivalent!
+            </pre>
+        </div>
+    </section>
+    <footer>
+        <p>copyright Sébastien F</p>
+    </footer>
+            
 </body>
 </html>
