--- a/CSS/TP 2 - Maquette Golden/index.html
+++ b/CSS/TP 2 - Maquette Golden/index.html
@@ -34,17 +34,17 @@
             <p>Lorem ipsum dolor sit amet.</p>
             <div class="flex reduce">
                 <div class="tiers">
-                    <img src="/img/icons/icon-basket.png" alt="" class="cercle">
+                    <div class="ResoIco Servico commerce"></div>
                     <h3>E-Commerce</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, possimus minus veritatis libero doloremque!</p>
                 </div>
                 <div class="tiers">
-                    <img src="/img/icons/icon-laptop.png" alt="" class="cercle">
+                    <div class="ResoIco Servico responsiveweb"></div>
                     <h3>Reponsive Web</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, possimus minus veritatis libero doloremque!</p>
                 </div>
                 <div class="tiers">
-                    <img src="/img/icons/icon-locked.png" alt="" class="cercle">
+                    <div class="ResoIco Servico security"></div>
                     <h3>Web Security</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, possimus minus veritatis libero doloremque!</p>
                 </div>
@@ -107,9 +107,9 @@
                     <p>kimberly Thompson</p>
                     <p>Marketer</p>
                     <div>
-                        <img src="img/icons/twitter-black.png" alt="" class="cercle">
-                        <img src="img/icons/facebook-black.png" alt="" class="cercle">
-                        <img src="img/icons/pinterest-black.png" alt="" class="cercle">
+                        <div class="ResoIco ResoWhite ttwhite"></div>
+                        <div class="ResoIco ResoWhite fbwhite"></div>
+                        <div class="ResoIco ResoWhite pwhite"></div>
                     </div>
                 </div>
                 <div class="tiers">
@@ -117,9 +117,9 @@
                     <p>Rico Massimo</p>
                     <p>Coder</p>
                     <div>
-                        <img src="img/icons/twitter-black.png" alt="" class="cercle">
-                        <img src="img/icons/facebook-black.png" alt="" class="cercle">
-                        <img src="img/icons/pinterest-black.png" alt="" class="cercle">
+                        <div class="ResoIco ResoWhite ttwhite"></div>
+                        <div class="ResoIco ResoWhite fbwhite"></div>
+                        <div class="ResoIco ResoWhite ggwhite"></div>
                     </div>
                 </div>
                 <div class="tiers">
@@ -127,9 +127,8 @@
                     <p>Uku Mason</p>
                     <p>Graphic Designer</p>
                     <div>
-                        <img src="img/icons/twitter-black.png" alt="" class="cercle">
-                        <img src="img/icons/facebook-black.png" alt="" class="cercle">
-                        <img src="img/icons/pinterest-black.png" alt="" class="cercle">
+                        <div class="ResoIco ResoWhite fbwhite"></div>
+                        <div class="ResoIco ResoWhite pwhite"></div>
                     </div>
                 </div>
             </div >
@@ -149,28 +148,30 @@
         <section id="contact">
             <h2>Contact us</h2>
             <p>Lorem ipsum dolor sit amet</p>
-            <div class="flex reduce">
-                <div class="flex column fifty">
-                    <input type="text" name="" id="" placeholder="YOUR NAME">
-                    <input type="text" name="" id="" placeholder="YOUR E-MAIL">
-                    <input type="text" name="" id="" placeholder="SUBJECT">
+            <form action="#" method="POST">
+                <div class="flex reduce">
+                    <div class="flex column fifty">
+                        <input type="text" name="" id="" placeholder="YOUR NAME">
+                        <input type="text" name="" id="" placeholder="YOUR E-MAIL">
+                        <input type="text" name="" id="" placeholder="SUBJECT">
+                    </div>
+                    <div class="fifty">
+                        <textarea name="" id="" cols="30" rows="10" class="all-width" placeholder="YOUR MESSAGE"></textarea>
+                    </div>
                 </div>
-                <div class="fifty">
-                    <textarea name="" id="" cols="30" rows="10" class="all-width" placeholder="YOUR MESSAGE"></textarea>
+                <div>
+                    <input type="submit" value="send a message" class="btn">
                 </div>
-            </div>
-            <div>
-                <input type="submit" value="send a message" class="btn">
-            </div>
+            </form>
         </section>
     </main>
     <footer class="flex">
         <span class="tiers">@copyright 2021 Sébastien fouvet</span>
         <div class="tiers flex">
-            <div class="cercle"></div>
-            <div class="cercle"></div>
-            <div class="cercle"></div>
-            <div class="cercle"></div>
+            <div class="ResoIco ResoBlack ttblack"></div>
+            <div class="ResoIco ResoBlack fbblack"></div>
+            <div class="ResoIco ResoBlack pblack"></div>
+            <div class="ResoIco ResoBlack ggblack"></div>
         </div>
         <div class="tiers"></div>
     </footer>
