ajout exercice integration maquette TRANS

--- a/SASS/TRANS/public/index.html
+++ b/SASS/TRANS/public/index.html
@@ -4,10 +4,68 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&family=Raleway:wght@100;400;500;600;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="CSS/style.css">
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <img src="img/bg-header.png" alt="">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">about</a>
+                </li>
+                <li>
+                    <a href="#">products</a>
+                </li>
+                <li>
+                    <a href="#">projects</a>
+                </li>
+                <li>
+                    <a href="#">contact</a>
+                </li>
+
+            </ul>
+        </nav>
+        <div id="logo">
+            <img src="img/logo.png" alt="Logo">
+        </div>
+        <div id="cta">
+            <h1>sleek as fkuc</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo sapiente facilis minus mollitia!</p>
+        </div>
+        <section class="superposition">
+            <div class="block-orange">
+                <h2>bright ass orange</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt possimus tenetur porro aliquam, tempora itaque aperiam perspiciatis reiciendis dignissimos assumenda odit incidunt sit voluptatem quae laudantium. Accusamus, cum at?</p>
+            </div>
+            <div class="flex-col">
+                <div>
+                    <img src="img/header-couche-soleil.png" alt="">
+                </div>
+                <div class="bg-white">
+                    <h2>finaly a layout that blows your head off</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quod excepturi laboriosam vero numquam tenetur corporis iusto magni quaerat eaque dolore, assumenda unde est nostrum saepe fugiat nam doloremque esse.
+                        Totam quod excepturi laboriosam vero numquam tenetur corporis iusto magni quaerat eaque dolore, assumenda unde est nostrum saepe fugiat nam doloremque esse.
+                    </p>
+
+                </div>
+            </div>
+        </section>
+    </header>
+    <section id="presentation" class="container-reduce">
+        <h2>melbourne, australia</h2>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nesciunt, ullam asperiores id illo deleniti sit eveniet provident in nobis dolorum, vitae dolore sequi rerum, perspiciatis facilis blanditiis aut minus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestiae esse dolorum error magnam iusto consequuntur reprehenderit aspernatur soluta earum atque inventore ea ipsam beatae, perferendis omnis labore, dignissimos quisquam provident?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur praesentium culpa iste eveniet hic, illo minima quisquam iusto, maiores temporibus facilis modi sapiente soluta et eos dolores a distinctio. Quibusdam!</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas culpa tempora fugiat dolore laboriosam, neque molestias dolorem nam dolorum delectus harum corrupti doloremque, dicta minus ullam nemo. Soluta, odio doloribus?</p>
+        </div>
+    </section>
+
+
     
 </body>
 </html>
