--- a/SASS/TRANS/public/index.html
+++ b/SASS/TRANS/public/index.html
@@ -64,6 +64,18 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas culpa tempora fugiat dolore laboriosam, neque molestias dolorem nam dolorum delectus harum corrupti doloremque, dicta minus ullam nemo. Soluta, odio doloribus?</p>
         </div>
     </section>
+    <section id="portrait">
+        <img src="img/batiment.png" alt="">
+        <div>
+            <div class="block-orange">
+                <h2>words & such</h2>
+            </div>
+            <div>
+                <img src="img/portrait.png" alt="">
+            </div>
+        </div>
+    </section>
+    
 
 
     
