Modification HTML + passage en un seul container flex-direction column

--- a/SASS/TRANS/public/index.html
+++ b/SASS/TRANS/public/index.html
@@ -41,17 +41,13 @@
                 <h2>bright ass orange</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque sunt possimus tenetur porro aliquam, tempora itaque aperiam perspiciatis reiciendis dignissimos assumenda odit incidunt sit voluptatem quae laudantium. Accusamus, cum at?</p>
             </div>
-            <div class="flex-col">
-                <div>
-                    <img src="img/header-couche-soleil.png" alt="">
-                </div>
-                <div class="bg-white">
-                    <h2>finaly a layout that blows your head off</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quod excepturi laboriosam vero numquam tenetur corporis iusto magni quaerat eaque dolore, assumenda unde est nostrum saepe fugiat nam doloremque esse.
-                        Totam quod excepturi laboriosam vero numquam tenetur corporis iusto magni quaerat eaque dolore, assumenda unde est nostrum saepe fugiat nam doloremque esse.
-                    </p>
-
-                </div>
+            <div class="right-col bg-img-soleil">
+            </div>
+            <div class="bg-white right-col">
+                <h2>finaly a layout that blows your head off</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam quod excepturi laboriosam vero numquam tenetur corporis iusto magni quaerat eaque dolore, assumenda unde est nostrum saepe fugiat nam doloremque esse.
+                    Totam quod excepturi laboriosam vero numquam tenetur corporis iusto magni quaerat eaque dolore, assumenda unde est nostrum saepe fugiat nam doloremque esse.
+                </p>
             </div>
         </section>
     </header>
